crates/pcb-eda/tests/snapshots/test_extends__extends_chain.snap
---
source: crates/pcb-eda/tests/test_extends.rs
expression: final_symbol
---
name: Final
extends: Middle
footprint: BaseFootprint
in_bom: false
pins: []
mpn: ~
manufacturer: ~
datasheet_url: ~
description: ~
distributors: {}
properties:
  Footprint: BaseFootprint
  PropA: ValueA
  PropB: ValueB_Override
  PropC: ValueC_Override
  PropD: ValueD
raw_sexp:
  List:
    - Symbol: symbol
    - String: Final
    - List:
        - Symbol: property
        - String: PropA
        - String: ValueA
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
    - List:
        - Symbol: property
        - String: Footprint
        - String: BaseFootprint
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
    - List:
        - Symbol: property
        - String: PropB
        - String: ValueB_Override
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
    - List:
        - Symbol: property
        - String: PropC
        - String: ValueC_Override
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
    - List:
        - Symbol: property
        - String: PropD
        - String: ValueD
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
