crates/pcb-eda/tests/snapshots/test_extends__extends_custom_pin_amplifier.snap
---
source: crates/pcb-eda/tests/test_extends.rs
expression: symbol
---
name: CustomPinAmplifier
extends: BaseAmplifier
footprint: SOIC-8
in_bom: true
pins:
  - name: VSS
    number: "5"
  - name: VDD
    number: "7"
  - name: NC
    number: "6"
mpn: BASE123
manufacturer: Generic Corp
datasheet_url: "https://example.com/base_datasheet.pdf"
description: Generic operational amplifier
distributors:
  Mouser:
    part_number: 123-BASE123
    url: "https://www.mouser.com/ProductDetail/123-BASE123"
properties:
  Datasheet: "https://example.com/base_datasheet.pdf"
  Footprint: SOIC-8
  Manufacturer_Name: Generic Corp
  Manufacturer_Part_Number: BASE123
  Mouser Part Number: 123-BASE123
  Mouser Price/Stock: "https://www.mouser.com/ProductDetail/123-BASE123"
  Reference: U
  Value: CustomAmp
  ki_description: Generic operational amplifier
raw_sexp:
  List:
    - Symbol: symbol
    - String: CustomPinAmplifier
    - List:
        - Symbol: in_bom
        - Symbol: "yes"
    - List:
        - Symbol: property
        - String: Reference
        - String: U
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
    - List:
        - Symbol: property
        - String: Footprint
        - String: SOIC-8
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Datasheet
        - String: "https://example.com/base_datasheet.pdf"
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Manufacturer_Name
        - String: Generic Corp
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Manufacturer_Part_Number
        - String: BASE123
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: ki_description
        - String: Generic operational amplifier
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Mouser Part Number
        - String: 123-BASE123
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Mouser Price/Stock
        - String: "https://www.mouser.com/ProductDetail/123-BASE123"
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
            - Symbol: hide
    - List:
        - Symbol: property
        - String: Value
        - String: CustomAmp
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
        - List:
            - Symbol: effects
            - List:
                - Symbol: font
                - List:
                    - Symbol: size
                    - Symbol: "1.27"
                    - Symbol: "1.27"
    - List:
        - Symbol: symbol
        - String: CustomPinAmplifier_0_1
        - List:
            - Symbol: pin
            - Symbol: power_in
            - Symbol: line
            - List:
                - Symbol: at
                - Symbol: "-7.62"
                - Symbol: "-5.08"
                - Symbol: "0"
            - List:
                - Symbol: length
                - Symbol: "3.81"
            - List:
                - Symbol: name
                - String: VSS
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
            - List:
                - Symbol: number
                - String: "5"
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
        - List:
            - Symbol: pin
            - Symbol: power_in
            - Symbol: line
            - List:
                - Symbol: at
                - Symbol: "-7.62"
                - Symbol: "5.08"
                - Symbol: "0"
            - List:
                - Symbol: length
                - Symbol: "3.81"
            - List:
                - Symbol: name
                - String: VDD
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
            - List:
                - Symbol: number
                - String: "7"
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
        - List:
            - Symbol: pin
            - Symbol: no_connect
            - Symbol: line
            - List:
                - Symbol: at
                - Symbol: "0"
                - Symbol: "0"
                - Symbol: "0"
            - List:
                - Symbol: length
                - Symbol: "2.54"
            - List:
                - Symbol: name
                - String: NC
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
            - List:
                - Symbol: number
                - String: "6"
                - List:
                    - Symbol: effects
                    - List:
                        - Symbol: font
                        - List:
                            - Symbol: size
                            - Symbol: "1.27"
                            - Symbol: "1.27"
