crates/pcb-eda/tests/snapshots/test_extends__extends_library_symbols.snap
---
source: crates/pcb-eda/tests/test_extends.rs
expression: symbols
---
- - BaseAmplifier
  - name: BaseAmplifier
    extends: ~
    footprint: SOIC-8
    in_bom: true
    pins:
      - name: V-
        number: "4"
      - name: V+
        number: "8"
      - name: "~"
        number: "1"
      - name: "-"
        number: "2"
      - name: +
        number: "3"
    mpn: BASE123
    manufacturer: Generic Corp
    datasheet_url: "https://example.com/base_datasheet.pdf"
    description: Generic operational amplifier
    distributors:
      Mouser:
        part_number: 123-BASE123
        url: "https://www.mouser.com/ProductDetail/123-BASE123"
    properties:
      Datasheet: "https://example.com/base_datasheet.pdf"
      Footprint: SOIC-8
      Manufacturer_Name: Generic Corp
      Manufacturer_Part_Number: BASE123
      Mouser Part Number: 123-BASE123
      Mouser Price/Stock: "https://www.mouser.com/ProductDetail/123-BASE123"
      Reference: U
      Value: BaseAmplifier
      ki_description: Generic operational amplifier
- - SpecificAmplifier
  - name: SpecificAmplifier
    extends: BaseAmplifier
    footprint: SOIC-8_Custom
    in_bom: true
    pins:
      - name: V-
        number: "4"
      - name: V+
        number: "8"
      - name: "~"
        number: "1"
      - name: "-"
        number: "2"
      - name: +
        number: "3"
    mpn: LM358N
    manufacturer: Texas Instruments
    datasheet_url: "https://example.com/base_datasheet.pdf"
    description: "Dual operational amplifier, low power"
    distributors:
      Arrow:
        part_number: LM358N
        url: "https://www.arrow.com/en/products/lm358n/texas-instruments"
      Mouser:
        part_number: 123-BASE123
        url: "https://www.mouser.com/ProductDetail/123-BASE123"
    properties:
      Arrow Part Number: LM358N
      Arrow Price/Stock: "https://www.arrow.com/en/products/lm358n/texas-instruments"
      Datasheet: "https://example.com/base_datasheet.pdf"
      Footprint: SOIC-8_Custom
      Manufacturer_Name: Texas Instruments
      Manufacturer_Part_Number: LM358N
      Mouser Part Number: 123-BASE123
      Mouser Price/Stock: "https://www.mouser.com/ProductDetail/123-BASE123"
      Reference: U
      Value: LM358
      ki_description: "Dual operational amplifier, low power"
- - CustomPinAmplifier
  - name: CustomPinAmplifier
    extends: BaseAmplifier
    footprint: SOIC-8
    in_bom: true
    pins:
      - name: VSS
        number: "5"
      - name: VDD
        number: "7"
      - name: NC
        number: "6"
    mpn: BASE123
    manufacturer: Generic Corp
    datasheet_url: "https://example.com/base_datasheet.pdf"
    description: Generic operational amplifier
    distributors:
      Mouser:
        part_number: 123-BASE123
        url: "https://www.mouser.com/ProductDetail/123-BASE123"
    properties:
      Datasheet: "https://example.com/base_datasheet.pdf"
      Footprint: SOIC-8
      Manufacturer_Name: Generic Corp
      Manufacturer_Part_Number: BASE123
      Mouser Part Number: 123-BASE123
      Mouser Price/Stock: "https://www.mouser.com/ProductDetail/123-BASE123"
      Reference: U
      Value: CustomAmp
      ki_description: Generic operational amplifier
- - MinimalExtends
  - name: MinimalExtends
    extends: BaseAmplifier
    footprint: SOIC-8
    in_bom: true
    pins:
      - name: V-
        number: "4"
      - name: V+
        number: "8"
      - name: "~"
        number: "1"
      - name: "-"
        number: "2"
      - name: +
        number: "3"
    mpn: BASE123
    manufacturer: Generic Corp
    datasheet_url: "https://example.com/base_datasheet.pdf"
    description: Generic operational amplifier
    distributors:
      Mouser:
        part_number: 123-BASE123
        url: "https://www.mouser.com/ProductDetail/123-BASE123"
    properties:
      Datasheet: "https://example.com/base_datasheet.pdf"
      Footprint: SOIC-8
      Manufacturer_Name: Generic Corp
      Manufacturer_Part_Number: BASE123
      Mouser Part Number: 123-BASE123
      Mouser Price/Stock: "https://www.mouser.com/ProductDetail/123-BASE123"
      Reference: U
      Value: BaseAmplifier
      ki_description: Generic operational amplifier
