crates/pcb-eda/tests/snapshots/test_extends__extends_nonexistent_parent.snap
---
source: crates/pcb-eda/tests/test_extends.rs
expression: orphan
---
name: OrphanSymbol
extends: NonExistentParent
footprint: OrphanFootprint
in_bom: false
pins: []
mpn: ~
manufacturer: ~
datasheet_url: ~
description: ~
distributors: {}
properties:
  Footprint: OrphanFootprint
  Value: Orphan
raw_sexp:
  List:
    - Symbol: symbol
    - String: OrphanSymbol
    - List:
        - Symbol: extends
        - String: NonExistentParent
    - List:
        - Symbol: property
        - String: Value
        - String: Orphan
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
    - List:
        - Symbol: property
        - String: Footprint
        - String: OrphanFootprint
        - List:
            - Symbol: at
            - Symbol: "0"
            - Symbol: "0"
            - Symbol: "0"
